<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_VisuCtrlCylinderFrame" Id="{27e27e36-55fd-4b1a-83b6-65bb568807df}">
    <Declaration><![CDATA[TYPE ST_VisuCtrlCylinderFrame EXTENDS ST_VisuCtrlUnitFrame :
STRUCT
	btnInit				: BOOL;				(*  *)
	btnAbort			: BOOL;				(*  *)
	btnReset			: BOOL;				(*  *)
	btnGoHome 			: BOOL;				(*  *)
	btnGoActive 		: BOOL;				(*  *)
	btnRealase 			: BOOL;				(*  *)
	
	bSensorHome 		: BOOL;				(*  *)
	bSensorActive 		: BOOL;				(*  *)
	bPositionHold		: BOOL;				(*  *)
	bError				: BOOL;				(*  *)
	iErrorID			: UDINT;			(*  *)
	
	tActiveMovement 	: TIME;				(*  *)
	tHomeMovement 		: TIME;				(*  *)
	
	sActiveDescription 	: STRING;			(*  *)
	sHomeDescription 	: STRING;			(*  *)
	sStateDescription	: STRING;			(*  *)
	
	sCylinderImage		: STRING;			(*  *)
	eCylinderState		: E_CylinderState;	(*  *)
	sCylinderState		: STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>